# armature-research

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RESEARCH-MECHANICS.md  pyproject.toml
docs/superpowers/plans/: 2026-06-28-recency-and-community-sources.md  2026-06-29-engagement-badge-pipeline.md
docs/superpowers/specs/: 2026-06-28-recency-and-community-sources-design.md  2026-06-29-engagement-badge-pipeline-design.md
research/tools/: communities.py  engagement.py  manifest.py  recency.py  reporting.py  social.py  web.py
tests/tools/: test_communities.py  test_engagement.py  test_manifest.py  test_recency.py  test_reporting.py  test_social.py  test_web.py
tests/workflows/: test_carry_forward_contract.py  test_structure.py
workflows/: competitive-intel.yaml  research-analyst.yaml  research-round.yaml
