[project]
name = "armature-research"
version = "0.1.0"
description = "Deep-dive research analyst powered by Armature — showcases fan-out, continuation, triggers, and structured output"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Bryan Sparks", email = "bryan@elftech.ai" },
]
dependencies = [
    "armature>=0.2.0",
    "tavily-python>=0.5",   # web search + URL extraction (set TAVILY_API_KEY)
    "python-dotenv>=1.0",   # loads TAVILY_API_KEY and OPENROUTER_API_KEY from .env
    "markdown>=3.5",        # HTML report rendering
    "nh3>=0.2",             # HTML sanitization for report output
    "beautifulsoup4>=4.12",  # HTML heading ID injection for TOC anchoring
    "pypdf>=4.0",           # optional: PDF document ingestion
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "anyio[trio]>=4.0",
]
social = [
    "praw>=7.7",                      # Reddit search (set REDDIT_CLIENT_ID + REDDIT_CLIENT_SECRET)
    "youtube-transcript-api>=0.6",    # YouTube transcripts (no API key needed)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
